Rename to brycegough repo

--- a/composer.json
+++ b/composer.json
@@ -1,30 +1,30 @@
 {
-    "name": "tcdent/php-restclient", 
-    "version": "0.1.7", 
-    "description": "A generic REST API client for PHP", 
-    "type": "library", 
-    "keywords": ["REST", "api", "client", "curl", "JSON", "XML"], 
-    "homepage": "http://github.com/tcdent/php-restclient", 
-    "license": "MIT", 
+    "name": "brycegough/php-restclient",
+    "version": "0.1.7",
+    "description": "A generic REST API client for PHP",
+    "type": "library",
+    "keywords": ["REST", "api", "client", "curl", "JSON", "XML"],
+    "homepage": "http://github.com/brycegough/php-restclient",
+    "license": "MIT",
     "authors": [
         {
-            "name": "Travis Dent", 
-            "role": "Developer", 
+            "name": "Travis Dent",
+            "role": "Developer",
             "email": "tcdent@gmail.com"
         }
     ],
     "support": {
-        "issues": "http://github.com/tcdent/php-restclient/issues"
-    }, 
+        "issues": "http://github.com/brycegough/php-restclient/issues"
+    },
     "require": {
-        "php": ">=5.4.0", 
-        "ext-curl": "*", 
+        "php": ">=5.4.0",
+        "ext-curl": "*",
         "ext-json": "*"
-    }, 
+    },
     "require-dev": {
-        "php": ">=5.5.7", 
+        "php": ">=5.5.7",
         "phpunit/phpunit": ">=4.5"
-    }, 
+    },
     "autoload": {
         "files": ["restclient.php"]
     }
